2010-11-10  Kai Habel  <kai.habel@gmx.de>

	* fltk-backend.cc (update_accelerator), (update_callback), (update_enable),
	(update_foregroundcolor), (update_visible): Check if find_item
	was succesful. (update_seperator): Make sure we don't write 
	beyond limits of menubar structure.

2010-11-10  John W. Eaton  <jwe@octave.org>

	Bug #31491.

	* pt-pr-code.cc, pt-pr-code.h (tree_print_code::print_fcn_handle_body):
	New function.
	* ov-fcn-handle (octave_fcn_handle::print_raw): Use it.
	* pt-pr-code.cc (tree_print_code::visit_anon_fcn_handle): Likewise.
	* pt-pr-code.h (tree_print_code::suppress_newline): Rename from
	printing_newlines.  Now int.  Change all uses.
	* pt-pr-code.cc (tree_print_code::newline): Only set
	beginning_of_line if newline is printed.

2010-11-10  John W. Eaton  <jwe@octave.org>

	Bug #31567.

	* ov-fcn.h (octave_base_value::is_class_constructor)
	octave_base_value::is_class_method): New optional character
	string argument.
	* ov-usr-fcn.h (octave_usr_fcn::is_class_constructor)
	octave_usr_fcn::is_class_method): New optional arg. If this
	argument is not empty, also check it against the name of the
	dispatch class.
	* ov-class.cc (Fclass): Allow class function to be called inside
	a class method.  Require that the to-be-constructed object is of
	the same class as the class constructor or method.

2010-11-09  John W. Eaton  <jwe@octave.org>

	* lex.ll (handle_number): Set lexer_flags.looking_for_object_index
	to false here.  Fixes bug #31608.

2010-11-09  John W. Eaton  <jwe@octave.org>

	* gl-render.cc (make_marker_list): Call fmod instead of mod.

	* data.cc (Frem): Use xrem instead of fmod and fmodf.
	(Fmod): Use xmod instead of mod.

2010-11-08  Kai Habel  <kai.habel@gmx.de>

	* fltk-backend.cc (do_find_uimenu_children): Simplify code, Remove 
	unused code.
	(update_submenu): Remove unused function.
	(add_to_menu (uimenu::properties&)): Simplify.  Get properties
	for valid objects only.
	(add_to_menu (figure::properties&)): Ditto.